@startuml

title __DISPENSER1's Class Diagram__\n

  namespace dispenser1 {
    class dispenser1.Demo {
        {static} + main()
    }
  }
  

  namespace dispenser1 {
    class dispenser1.DrinkDispenser {
        {static} + DRINK_PRICE : int
        + moneyEntered : int
        + DrinkDispenser()
        + askCoffee()
        + askTea()
        + giveMoney()
        + setState()
    }
  }
  

  namespace dispenser1 {
    class dispenser1.State {
        + askCoffee()
        + askTea()
        + giveMoney()
    }
  }
  

  namespace dispenser1 {
    class dispenser1.StateReadyToServe {
        + StateReadyToServe()
        + askCoffee()
        + askTea()
        - serveDrink()
    }
  }
  

  namespace dispenser1 {
    class dispenser1.StateWaitingForMoney {
        + StateWaitingForMoney()
        + giveMoney()
    }
  }
  

  dispenser1.DrinkDispenser o-- dispenser1.State : state
  dispenser1.StateReadyToServe -up-|> dispenser1.State
  dispenser1.StateWaitingForMoney -up-|> dispenser1.State


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
